--- a/SummonAndroid/app/src/main/AndroidManifest.xml
+++ b/SummonAndroid/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vishalkuo.summon" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +12,11 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name=".ZXIngSplash"
+            android:label="@string/title_activity_zxing_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
