--- a/SummonAndroid/app/src/main/AndroidManifest.xml
+++ b/SummonAndroid/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name=".ZXIngSplash"
@@ -22,6 +21,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".CustomerOrderActivity"
+            android:label="@string/title_activity_customer_order" >
         </activity>
     </application>
 
