--- a/SummonAndroid/app/src/main/AndroidManifest.xml
+++ b/SummonAndroid/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
+
             android:name=".ZXIngSplash"
-            android:label="@string/title_activity_zxing_splash" >
+            android:label="@string/title"
+            android:theme="@style/MyCustomTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
