--- a/SummonAndroid/app/build.gradle
+++ b/SummonAndroid/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.github.markushi:circlebutton:1.1'
 }
